# PyCrypCli

./: .flake8  .gitignore  Dockerfile  README.md  client.py  exceptions.py  game.py  game_objects.py  mypy.ini  pycrypcli.py  pyproject.toml  requirements.txt  setup.py  timer.py
.github/workflows/: ci.yml  docker_clean.yml  pycrypcli.yml  python.yml
PyCrypCli/: __init__.py  __main__.py  client.py  context.py  exceptions.py  game.py  game_objects.py  pycrypcli.py  timer.py  util.py
PyCrypCli/commands/: __init__.py  account.py  command.py  device.py  files.py  help.py  inventory.py  miner.py  morphcoin.py  network.py  service.py  shell.py  shop.py  status.py
PyCrypCli/context/: __init__.py  context.py  device_context.py  login_context.py  main_context.py  root_context.py
PyCrypCli/game_objects/: __init__.py  device.py  device_hardware.py  file.py  game_object.py  inventory_element.py  resource_usage.py  transaction.py
PyCrypCli/game_objects/network/: __init__.py  network.py  network_invitation.py  network_membership.py
PyCrypCli/game_objects/service/: __init__.py  bruteforce_service.py  miner.py  portscan_service.py  public_service.py  service.py
PyCrypCli/game_objects/shop/: __init__.py  shop_category.py  shop_product.py
PyCrypCli/game_objects/wallet/: __init__.py  public_wallet.py  wallet.py
PyCrypCli/models/: __init__.py  config.py  device.py  device_hardware.py  file.py  inventory_element.py  model.py  resource_usage.py  server_responses.py
commands/: command.py  device.py  files.py  miner.py  morphcoin.py  service.py  status.py
(+27 files in other folders)
