[tool.poetry]
name = "PyCrypCli"
version = "2.1.0b1"
description = "Python Cryptic Game Client"
authors = ["Defelo <elodef42@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-only"
homepage = "https://github.com/Defelo/PyCrypCli"
repository = "https://github.com/Defelo/PyCrypCli"
packages = [{ include = "PyCrypCli" }]

[tool.poetry.dependencies]
python = "^3.10"
websocket-client = "^1.3.1"
pyreadline = "^2.1"
pypresence = "^4.2.1"
sentry-sdk = "^1.5.7"
requests = "^2.27.1"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
bandit = "1.7.2"
black = "^22.12.0"
wemake-python-styleguide = "^0.16.1"
mypy = "^0.941"
types-requests = "^2.27.12"

[tool.poetry.scripts]
pycrypcli = "PyCrypCli.pycrypcli:main"

[tool.poe.tasks]
flake8 = "flake8 PyCrypCli --count --statistics --show-source"
black = "black PyCrypCli"
mypy = "mypy PyCrypCli"
lint = ["black", "mypy", "flake8"]
pre-commit = ["lint"]

[tool.black]
target-version = ["py310"]
line-length = 120
skip-magic-trailing-comma = true

[tool.mypy]
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
